add basic generator functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       <!-- <div class="sort_bar"></div> -->
     </div>
 
+    <input id="step" type="button" value="step"></input>
+
     <script src="main.js"></script>
   </body>
 </html>
