add reset button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
 
     <input id="step" type="button" value="step"></input>
-
+    <input id="reset" type="button" value="reset"></input>
     <script src="main.js"></script>
   </body>
 </html>
