add top bar, style, add labels

--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   </head>
   <body>
+    <header>
+      <h2 class="title">sort buddy</h2>
+      <div class="button_container">
+        <input id="step" type="button" value="step"></input>
+        <input id="reset" type="button" value="reset"></input>
+      </div>
+    </header>
+
     <div class="sort_container">
       <!-- <div class="sort_bar"></div> -->
     </div>
+    <span class="sort_container_label">bubble sort</span>
 
-    <input id="step" type="button" value="step"></input>
-    <input id="reset" type="button" value="reset"></input>
+
     <script src="main.js"></script>
   </body>
 </html>
