--- a/index.html
+++ b/index.html
@@ -4,20 +4,39 @@
     <meta charset="utf-8" />
     <title>sort buddy</title>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />
   </head>
   <body>
     <header>
-      <h2 class="title">sort buddy</h2>
+      <h2 class="title">sort_buddy</h2>
       <div class="button_container">
         <input id="step" type="button" value="step"></input>
         <input id="reset" type="button" value="reset"></input>
       </div>
     </header>
 
-    <div class="sort_container">
-      <!-- <div class="sort_bar"></div> -->
+    <div class="body_columns_container">
+      <div class="body_column">
+        <span class="sort_container_label">bubble_sort</span>
+        <div class="sort_container" id="bubble"></div>
+        <span class="sort_container_label">insertion_sort</span>
+        <div class="sort_container" id="insertion"></div>
+        <span class="sort_container_label">quick_sort</span>
+        <div class="sort_container" id="quick"></div>
+      </div>
+      <div class="body_column">
+        <span class="sort_container_label">selection_sort</span>
+        <div class="sort_container" id="selection"></div>
+        <span class="sort_container_label">merge_sort</span>
+        <div class="sort_container" id="merge"></div>
+
+        <span class="sort_container_label">heap_sort</span>
+        <div class="sort_container" id="heap"></div>
+      </div>
     </div>
-    <span class="sort_container_label">bubble sort</span>
+
+
+
 
 
     <script src="main.js"></script>
