--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <div class="body_columns_container">
-      <div class="body_column">
+      <div class="body_column left">
         <span class="sort_container_label">bubble_sort</span>
         <div class="sort_container" id="bubble"></div>
         <span class="sort_container_label">insertion_sort</span>
@@ -24,7 +24,7 @@
         <span class="sort_container_label">quick_sort</span>
         <div class="sort_container" id="quick"></div>
       </div>
-      <div class="body_column">
+      <div class="body_column right">
         <span class="sort_container_label">selection_sort</span>
         <div class="sort_container" id="selection"></div>
         <span class="sort_container_label">merge_sort</span>
