--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
         <div class="sort_container" id="selection"></div>
         <span class="sort_container_label">merge_sort</span>
         <div class="sort_container" id="merge"></div>
-
         <span class="sort_container_label">heap_sort</span>
         <div class="sort_container" id="heap"></div>
       </div>
     </div>
 
 
-
-
-
+    <script src="bubble.js"></script>
+    <script src="selection.js"></script>
+    <script src="insertion.js"></script>
+    <script src="merge.js"></script>
+    <script src="quick.js"></script>
+    <script src="heap.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
