finish rework for multiple boxes. working again

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <script src="merge.js"></script>
     <script src="quick.js"></script>
     <script src="heap.js"></script>
+    <script src="utilities.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
+
+
