put labels inside sort boxes and change clearing on display

--- a/index.html
+++ b/index.html
@@ -17,20 +17,29 @@
 
     <div class="body_columns_container">
       <div class="body_column left">
-        <span class="sort_container_label">bubble_sort</span>
-        <div class="sort_container" id="bubble"></div>
-        <span class="sort_container_label">insertion_sort</span>
-        <div class="sort_container" id="insertion"></div>
-        <span class="sort_container_label">quick_sort</span>
-        <div class="sort_container" id="quick"></div>
+        <div class="sort_container" id="bubble">
+          <span class="sort_container_label">bubble_sort</span>
+        </div>
+        <div class="sort_container" id="insertion">
+          <span class="sort_container_label">insertion_sort</span>
+        </div>
+        <div class="sort_container" id="quick">
+          <span class="sort_container_label">quick_sort</span>
+        </div>
       </div>
       <div class="body_column right">
-        <span class="sort_container_label">selection_sort</span>
-        <div class="sort_container" id="selection"></div>
-        <span class="sort_container_label">merge_sort</span>
-        <div class="sort_container" id="merge"></div>
-        <span class="sort_container_label">heap_sort</span>
-        <div class="sort_container" id="heap"></div>
+
+        <div class="sort_container" id="selection">
+          <span class="sort_container_label">selection_sort</span>
+        </div>
+
+        <div class="sort_container" id="merge">
+          <span class="sort_container_label">merge_sort</span>
+        </div>
+
+        <div class="sort_container" id="heap">
+          <span class="sort_container_label">heap_sort</span>
+        </div>
       </div>
     </div>
 
