--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
   <body>
     <div id="app"></div>
   </body>
-  <script type="text/javascript" src="/bundle.js"></script>
+  <script type="text/javascript" src="bundle.js"></script>
 </html>
