edit deploy script

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>sort_buddy</title>
   </head>
   <body>
+    TESTING
     <div id="app"></div>
   </body>
   <script type="text/javascript" src="bundle.js"></script>
