--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>sort_buddy</title>
   </head>
   <body>
-    TESTING
+    TESTING TWO
     <div id="app"></div>
   </body>
   <script type="text/javascript" src="bundle.js"></script>
